# homework

./: CMakeLists.txt
data_structures/string/: GS_string.cpp  GS_string.h  include.h
data_structures/vector/: GS_vector.cpp  GS_vector.h  include.h
include/: include.h
maths_functions/triangulus_Delone/: include.h  triangulus.cpp  triangulus.h
